[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
axum = {version = "0.6.20", features = ["json", "macros"]}
hyper = "0.14.27"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
